[package]
name = "tablam"
version = "0.1.0"
authors = ["Mario Montoya <mamcx@elmalabarista.com>", "Maxwell Bernstein <tekknolagi@gmail.com>"]
repository = "https://bitbucket.org/tablam/tablam/"
license = "MPL-2.0"
readme = "README.md"
homepage = "https://bitbucket.org/tablam/tablam/"
keywords = ["database", "interpreter", "language", "relational", "columnar"]
categories = ["database", "language", "relational"]

[workspace]
members = ["lang", "drivers"]

[dependencies]
time = "0.1.0"
rand = "0.5"
num = "*"
bytes = "0.4"
bit-vec = "*"

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]

[[bin]]
name = "table"
path = "lang/src/main.rs"
