[package]
name = "tablam-rdbms"
version = "0.1.0"
authors = ["Mario Alejandro Montoya Cortes <mamcx@elmalabarista.com>"]
license = "MPL-2.0"
keywords = ["database", "relational", "sqlite"]
categories = ["database", "relational"]
repository = "https://bitbucket.org/tablam/tablam/"
homepage = "https://bitbucket.org/tablam/tablam/"

[dependencies.rusqlite]
version = "0.13.0"
features = ["bundled"]

[lib]
name = "drivers"
path = "src/lib.rs"
